k8s/deploy-robohash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robo-hash-deploy-v1
spec:

  replicas: 1

  selector:
    matchLabels:
      pod: robo-hash-pod-label-v1

  template:
    metadata:
      labels:
        pod: robo-hash-pod-label-v1
    spec:
      terminationGracePeriodSeconds: 2
      affinity:
        # Избегай топологии, в которых есть другие pods (pod label)
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: pod
                    operator: In
                    values:
                      - app-pod-label-v1
      containers:
        - name: robo-hash-container
          # WORK: wdenniss/robohash:1
          image: 'grinway/k8s_test:v3'
          resources:
            requests:
              cpu: '20m'
              memory: '20Mi'
