k8s/mysql-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-mysql-v1
spec:
  selector:
    matchLabels:
      pod: app-mysql-pod-label-v1
  serviceName: app-mysql-service
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: app-mysql-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: '2Gi'
  template:
    metadata:
      labels:
        pod: app-mysql-pod-label-v1
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - image: 'mysql:8.0.33'
          name: app-mysql
          volumeMounts:
            - mountPath: '/var/lib/mysql'
              name: app-mysql-pvc
          resources:
            requests:
              cpu: '1000m'
              memory: '2Gi'
---
apiVersion: v1
kind: Service
metadata:
  name: app-mysql-service
spec:
  ports:
    - port: 3306
  clusterIP: None # Headless service
                  # A-type запись (IP каждого пода), не виртуальный внутрикластерный IP
  selector:
    pod: app-mysql-pod-label-v1
