k8s/service-robohash.yaml
apiVersion: v1
kind: Service
metadata:
  name: robo-hash-service
spec:
  selector:
    pod: robo-hash-pod-label-v1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      #targetPort: 80 # default is port
